--- a/ui/window.glade
+++ b/ui/window.glade
@@ -167,16 +167,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox" id="file-box">
+          <object class="GtkBox" id="files-box">
             <property name="height-request">500</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="margin-top">10</property>
             <child>
-              <object class="GtkDrawingArea" id="drawingarea">
-                <property name="width-request">200</property>
+              <object class="GtkBox" id="files-canvas-box">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <child>
+                  <placeholder/>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
