fixed gdb output parsing

--- a/ui/window.glade
+++ b/ui/window.glade
@@ -307,7 +307,7 @@
                         <property name="can-focus">True</property>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
+                        <property name="expand">True</property>
                         <property name="fill">True</property>
                         <property name="position">0</property>
                       </packing>
@@ -431,7 +431,7 @@
                         <property name="can-focus">True</property>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
+                        <property name="expand">True</property>
                         <property name="fill">True</property>
                         <property name="position">0</property>
                       </packing>
