--- a/ui/window.glade
+++ b/ui/window.glade
@@ -250,6 +250,20 @@
                     <property name="position">4</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkButton" id="restart-button">
+                    <property name="label" translatable="yes">Restart</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                    <property name="tooltip-text" translatable="yes">(F12)</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">5</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -347,7 +361,7 @@
                   <object class="GtkLabel" id="gdbio-label">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">GDB IO</property>
+                    <property name="label" translatable="yes">GDB I/O</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -484,7 +498,7 @@
                   <object class="GtkLabel" id="targetio-label">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Target IO</property>
+                    <property name="label" translatable="yes">Target I/O</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
