--- a/ui/breakpoint_dialog.glade
+++ b/ui/breakpoint_dialog.glade
@@ -9,6 +9,10 @@
     <child internal-child="vbox">
       <object class="GtkBox" id="content">
         <property name="can-focus">False</property>
+        <property name="margin-start">10</property>
+        <property name="margin-end">10</property>
+        <property name="margin-top">10</property>
+        <property name="margin-bottom">10</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
