--- a/ui/window.glade
+++ b/ui/window.glade
@@ -75,6 +75,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="margin-start">10</property>
+                <property name="margin-end">10</property>
                 <property name="margin-top">10</property>
                 <property name="margin-bottom">10</property>
                 <property name="spacing">10</property>
@@ -162,6 +163,45 @@
                     <property name="position">5</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkSeparator">
+                    <property name="width-request">2</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">6</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="open-file-button">
+                    <property name="label" translatable="yes">Open File</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">7</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="close-unused-button">
+                    <property name="label" translatable="yes">Close Unused Files</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                    <property name="tooltip-text" translatable="yes">Used Files have active processes or breakpoints set. (F4)</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">8</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -170,7 +210,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSeparator" id="buttons-seperator">
+              <object class="GtkSeparator">
                 <property name="height-request">2</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
@@ -230,7 +270,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkSeparator" id="io-seperator">
+          <object class="GtkSeparator">
             <property name="height-request">2</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
@@ -378,7 +418,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSeparator" id="wrapper-seperator">
+              <object class="GtkSeparator">
                 <property name="width-request">2</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
