--- a/ui/breakpoint_dialog.glade
+++ b/ui/breakpoint_dialog.glade
@@ -4,7 +4,7 @@
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkDialog" id="dialog">
     <property name="can-focus">False</property>
-    <property name="title" translatable="yes">Modify breakpoint</property>
+    <property name="title" translatable="yes">Modify Breakpoint</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="content">
