--- a/ui/window.glade
+++ b/ui/window.glade
@@ -186,6 +186,33 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkStackSwitcher" id="view-stack-switcher">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="margin-top">10</property>
+                    <property name="margin-bottom">10</property>
+                    <property name="homogeneous">True</property>
+                    <property name="stack">view-stack</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">7</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparator">
+                    <property name="width-request">2</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">8</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkButton" id="open-file-button">
                     <property name="label" translatable="yes">Open File</property>
                     <property name="visible">True</property>
@@ -197,7 +224,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">7</property>
+                    <property name="position">9</property>
                   </packing>
                 </child>
                 <child>
@@ -213,7 +240,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">8</property>
+                    <property name="position">10</property>
                   </packing>
                 </child>
               </object>
@@ -244,36 +271,75 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox" id="files-box">
-            <property name="height-request">200</property>
+          <object class="GtkStack" id="view-stack">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <child>
-              <object class="GtkBox" id="files-canvas-box">
+              <object class="GtkBox" id="files-box">
+                <property name="height-request">200</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-start">10</property>
                 <child>
-                  <placeholder/>
+                  <object class="GtkBox" id="files-canvas-box">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="margin-start">10</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkNotebook" id="files-notebook">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="margin-end">10</property>
+                    <property name="scrollable">True</property>
+                    <property name="enable-popup">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="title" translatable="yes">Source View</property>
               </packing>
             </child>
             <child>
-              <object class="GtkNotebook" id="files-notebook">
+              <object class="GtkScrolledWindow" id="overview-scrolled-window">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
-                <property name="margin-end">10</property>
-                <property name="scrollable">True</property>
-                <property name="enable-popup">True</property>
+                <child>
+                  <object class="GtkViewport" id="overview-viewport">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <child>
+                      <!-- n-columns=1 n-rows=1 -->
+                      <object class="GtkGrid" id="overview-grid">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <property name="row-spacing">10</property>
+                        <property name="column-spacing">10</property>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
               <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
+                <property name="title" translatable="yes">Overview</property>
                 <property name="position">1</property>
               </packing>
             </child>
